feat: add search funtion to listing

--- a/Movies-Express/views/index.hbs
+++ b/Movies-Express/views/index.hbs
@@ -5,7 +5,7 @@
       <form action="/movies">
         <div class="input-group mb-3">
           <input type="text" name="search" class="form-control" placeholder="Enter movie name to search..."
-            aria-label="Movie Name..." aria-describedby="search-button">
+            aria-label="Movie Name..." aria-describedby="search-button" value="{{keyword}}">
           <div class="input-group-append">
             <button class="btn btn-outline-secondary" type="submit" id="search-button">Search</button>
           </div>
